Fix header wrap.  Minor code cleanup.

--- a/css/style.css
+++ b/css/style.css
@@ -4,20 +4,55 @@ body {
   font-family: 'Shadows Into Light', cursive;
 }
 
-input {
-  display: block;
-  margin: 5px auto;
-  height: 25px;
-  width: 300px;
-  font-size: 16px;
-  line-height: 25px;
-  padding: 0 5px;
-  font-family: 'Raleway', sans-serif;
+form {
+  display: inline-block;
 }
 
-button {
+h1, h2, h3, h4 {
+  margin: 0;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  min-width: 650px;
+  z-index: 10;
+  height: 40px;
+  color: rgb(255, 255, 255);
+  background-color: rgb(40, 40, 41);
+  border-top: 2px solid rgb(236, 33, 39);
+  font-size: 24px;
+  line-height: 40px;
+  padding: 5px 20px;
+}
+
+.search-container {
+  display: inline-block;
+  position: absolute;
+  left: 50%;
+  top: 0px;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  white-space: nowrap;
+}
+
+.search-input {
   height: 30px;
-  width: 200px;
+  width: 300px;
+  font-size: 16px;
+  line-height: 30px;
+  padding: 0 10px;
+  font-family: 'Raleway', sans-serif;
+  border-radius: 3px;
+  border: none;
+}
+
+.search-button {
+  position: relative;
+  top: 3px;
+  height: 30px;
+  width: 150px;
   margin: 5px 0;
   color: rgb(255, 255, 255);
   background-color: rgb(236, 33, 39);
@@ -28,44 +63,14 @@ button {
   border-radius: 5px;
 }
 
-h1, h2, h3, h4 {
-  margin: 0;
-}
-
-.header {
-  position: fixed;
-  height: 135px;
-  top: 0;
-  width: 100%;
-  z-index: 10;
-}
-
-.banner {
-  height: 30px;
-  width: 100%;
-  color: rgb(255, 255, 255);
-  background-color: rgb(40, 40, 41);
-  border-top: 2px solid rgb(236, 33, 39);
-  font-size: 24px;
-  line-height: 30px;
-  padding: 5px 20px;
-}
-
-.search-container {
-  padding: 5px 0;
-  text-align: center;
-  border-bottom: 1px solid rgb(0, 0, 0);
-  background-color: rgb(231, 231, 231);
-  padding-top: 5px;
-}
-
 .blog-post-container {
   position: relative;
-  top: 135px;
+  top: 40px;
+  padding-top: 10px;
   text-align: center;
 }
 
-.fa-tumblr-square {
+.fa.no-posts{
   font-size: 36px;
   position: fixed;
   bottom: 25px;
@@ -107,10 +112,6 @@ h1, h2, h3, h4 {
   padding: 5px 10px;
 }
 
-.blog-post-title {
-  /*height: 45px;*/
-}
-
 .blog-post-date {
   color: rgb(119, 119, 119);
 }
@@ -118,5 +119,24 @@ h1, h2, h3, h4 {
 .blog-post-image {
   height: 150px;
   width: auto;
+}
+
+.fa.blog-post-image-replacement {
+  height: 150px;
+  padding-top: 50px;
+  font-size: 48px;
+}
+
+@media ( max-width: 776px ) {
+  .header-title {
+    visibility: hidden;
+  }
+
+  .search-container {
+    left: 5%;
+    -webkit-transform: none;
+    transform: none;
+  }
+
 }
 
